add swagger annotations
