# api-gateway/docs/swagger.yaml
@@ -1,4 +1,69 @@
 basePath: /
+definitions:
+  jwtmanager.ReturnTokenType:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        type: string
+    type: object
+  response.Response:
+    properties:
+      data: {}
+      error:
+        type: string
+      status_code:
+        type: integer
+    type: object
+  userEntity.PublicUser:
+    properties:
+      email:
+        type: string
+      id:
+        type: string
+      username:
+        type: string
+    type: object
+  userEntity.Role:
+    enum:
+    - 0
+    - 1
+    type: integer
+    x-enum-varnames:
+    - Admin
+    - Regular
+  userEntity.UpdateUserRequest:
+    properties:
+      code:
+        type: string
+      email:
+        type: string
+      enabled:
+        type: boolean
+      role:
+        $ref: '#/definitions/userEntity.Role'
+      username:
+        type: string
+    type: object
+  userhandler.checkCodeReq:
+    properties:
+      code:
+        type: string
+      id:
+        type: string
+    type: object
+  userhandler.requestBody:
+    properties:
+      email:
+        type: string
+      username:
+        type: string
+    type: object
+  userhandler.resp:
+    properties:
+      id:
+        type: string
+    type: object
 host: localhost:3000
 info:
   contact:
@@ -11,7 +76,185 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   title: API Gateway
   version: "1.0"
-paths: {}
+paths:
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: Get all users
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/userEntity.PublicUser'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: Get all users
+      tags:
+      - users
+  /users/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get user by id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/userEntity.PublicUser'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: Get user
+      tags:
+      - users
+    put:
+      consumes:
+      - application/json
+      description: Update user
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User with optional fields
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/userEntity.UpdateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/userEntity.PublicUser'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: Update user
+      tags:
+      - users
+  /users/check-code:
+    post:
+      consumes:
+      - application/json
+      description: Check code with id and code
+      parameters:
+      - description: Request body containing ID and Code
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/userhandler.checkCodeReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/jwtmanager.ReturnTokenType'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: Check code
+      tags:
+      - users
+  /users/registration:
+    post:
+      consumes:
+      - application/json
+      description: Registration
+      parameters:
+      - description: Request body containing username and email
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/userhandler.requestBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/userhandler.resp'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: Registration
+      tags:
+      - users
 schemes:
 - http
 swagger: "2.0"
